fix: delete some warnings from existence